add_executable(
        os_determination_with_empty
        main.cpp
        src/Args/Args.h
        src/Common/CommonType.h
        src/Common/CommonFunc.h
        src/Determination/Determination.h
        src/Machines/Machine/Machine.h
        src/Machines/Machine/MachineParser.h
        src/Machines/Machine/MachineSaving.h
        src/Machines/DeterministicMachine/DeterministicMachine.h
        src/Machines/MachineFunc.h
)
